--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/vim-less"]
 	path = bundle/vim-less
 	url = https://github.com/groenewege/vim-less.git
+[submodule "/Users/alanvdam/.vim/bundle/vundle"]
+	path = /Users/alanvdam/.vim/bundle/vundle
+	url = https://github.com/gmarik/vundle.git
